<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="98dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="61dp"
            android:text="@string/smart_garde"
            android:textAppearance="@style/smart_garde" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/welcome"
            android:textAppearance="@style/welcome" />
        <TextView
            android:id="@+id/home"
            android:layout_width="200dp"
            android:layout_height="98dp"
            android:text="@string/home"
            android:fontFamily="@font/poppins_bold"
            android:textAppearance="@style/home"
            />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="280dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/setting"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/seticon"
            android:elevation="1dp"
            android:alpha="0.5"
            />

        <Switch
            android:id="@+id/switch5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="195dp"
        android:layout_height="106dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="145dp"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/thermometer"/>
        <View
            android:layout_width="1955dp"
            android:layout_height="106dp"
            android:background="@drawable/rectangle_temperature"
            android:elevation="-1dp" />
        <TextView
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="78dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/Temperature"
            android:textAppearance="@style/temperature"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/val_temperature"
            android:layout_width="80dp"
            android:layout_height="59dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_bold"
            android:textAppearance="@style/som_id"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="195dp"
        android:layout_height="106dp"
        android:layout_marginLeft="209dp"
        android:layout_marginTop="145dp"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/humidity"/>
        <View
            android:layout_width="195dp"
            android:layout_height="106dp"
            android:background="@drawable/rectangle_humidity"
            android:elevation="-1dp" />
        <TextView
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/humidity"
            android:textAppearance="@style/temperature"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/val_humidity"
            android:layout_width="80dp"
            android:layout_height="59dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:textAppearance="@style/some_id"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="195dp"
        android:layout_height="106dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="257dp"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/gas"/>
        <View
            android:layout_width="195dp"
            android:layout_height="106dp"
            android:background="@drawable/rectangle_ph"
            android:elevation="-1dp" />
        <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/gas"
            android:textAppearance="@style/temperature"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/val_ph"
            android:layout_width="120dp"
            android:layout_height="59dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:textAppearance="@style/ph"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="195dp"
        android:layout_height="106dp"
        android:layout_marginLeft="209dp"
        android:layout_marginTop="257dp"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/sun"/>
        <View
            android:layout_width="1955dp"
            android:layout_height="106dp"
            android:background="@drawable/rectangle_light"
            android:elevation="-1dp" />
        <TextView
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="78dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/lighting"
            android:textAppearance="@style/lighting"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/val_lighting"
            android:layout_width="120dp"
            android:layout_height="59dp"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_bold"
            android:textAppearance="@style/some_light" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="183.93dp"
        android:layout_height="180dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="400dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/lexend_semibold"
            android:text="@string/light1"
            android:textAppearance="@style/fan"
            />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/star"
            />

        <View
            android:layout_width="183.93dp"
            android:layout_height="180dp"
            android:background="@drawable/rectangle_6"
            android:elevation="-1dp" />

        <LinearLayout
            android:layout_width="50.22dp"
            android:layout_height="45dp"
            android:background="@drawable/ellipse"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="28dp">
            <ImageView
                android:id="@+id/ledr1"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/lamp"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                />
        </LinearLayout>
        <Switch
            android:id="@+id/switchlr1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="110dp"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="183.93dp"
        android:layout_height="180dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="400dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/lexend_semibold"
            android:text="@string/fan1"
            android:textAppearance="@style/fan" />
        <View
            android:layout_width="183.93dp"
            android:layout_height="230dp"
            android:background="@drawable/rectangle_7"
            android:elevation="-1dp" />
        <LinearLayout
            android:layout_width="50.22dp"
            android:layout_height="45dp"
            android:background="@drawable/ellipse_2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="28dp"
            android:orientation="horizontal">
            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/fanr1"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/fan"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"/>
        </LinearLayout>
        <Switch
            android:id="@+id/switchfr1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="110dp"
            android:thumb="@drawable/thumb_2"
            android:track="@drawable/track_2"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="183.93dp"
        android:layout_height="180dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="600dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/lexend_semibold"
            android:text="@string/light2"
            android:textAppearance="@style/fan"
            />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/star"
            />
        <View
            android:layout_width="183.93dp"
            android:layout_height="180dp"
            android:background="@drawable/rectangle_6"
            android:elevation="-1dp"/>
        <LinearLayout
            android:layout_width="50.22dp"
            android:layout_height="45dp"
            android:background="@drawable/ellipse"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="28dp">
            <ImageView
                android:id="@+id/ledr2"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/lamp"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                />
        </LinearLayout>
        <Switch
            android:id="@+id/switchlr2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="110dp"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="183.93dp"
        android:layout_height="180dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="600dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/lexend_semibold"
            android:text="@string/fan2"
            android:textAppearance="@style/fan" />
        <View
            android:layout_width="183.93dp"
            android:layout_height="230dp"
            android:background="@drawable/rectangle_7"
            android:elevation="-1dp" />
        <LinearLayout
            android:layout_width="50.22dp"
            android:layout_height="45dp"
            android:background="@drawable/ellipse_2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="28dp"
            android:orientation="horizontal">
            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/fanr2"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/fan"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"/>
        </LinearLayout>
        <Switch
            android:id="@+id/switchfr2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="110dp"
            android:thumb="@drawable/thumb_2"
            android:track="@drawable/track_2"
            />
    </RelativeLayout>



</RelativeLayout>


